--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 </body>
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script> 
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/babel"> 
+    function App(){
+        return(
+            <div>
+                <h1> </h1>
+            </div>
+        );
+    }
     const root = document.getElementById("root");
-    const h3 = React.createElement("h3",{
-        onMouseEnter: () => console.log("mouse enter")
-    },"Hello I'm a span");
-    const btn = React.createElement("button",{
-        onClick:()=>console.log("im clicked")
-    },"Click me");
-    const container = React.createElement("div",null,[h3,btn]);
-    ReactDOM.render(container,root); 
+    ReactDOM.render(<App/>,root); 
 </script>
 </html>
